[tool.poetry]
name = "mls800-docs"
version = "0.1.0"
description = ""
authors = ["Bertrand Lemasle <blemasle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
mkdocs = "^1.0"
mkdocs-material = "^3.2"
pymdown-extensions = "^6.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
